--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS__ACCOUNT_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCOUNT_SECRET_KEY }}
           aws-region: us-east-2
 
       # Authenticate Docker with ECR
