--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "resume-builder-frontend"
 description = ''
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.8,<4"
 license = "MIT"
 keywords = []
 authors = [
